# UGVU

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_ade20k_api_experiment.py  run_ade20k_candidate_experiment.py  run_api_experiment.py  run_api_sanity.py  run_cityscapes_api_experiment.py  run_cityscapes_candidate_experiment.py  run_requested_experiments.py  setup.py  summarize_diagnostic_results.py
configs/: ade20k.yaml  default.yaml  nyu_depth.yaml  refcoco.yaml
experiments/: exp1_main_results.py  exp2_prompt_robustness.py  exp3_generation_consistency.py  exp4_cross_model.py  exp5_calibration.py  exp6_ablation.py  exp7_reliability_diagnostics.py  run_experiment.py  run_real_experiment.py
tests/: test_core.py  test_reliability_diagnostics.py  test_reviewer_requested_experiments.py
ugvu/: __init__.py  __main__.py  diagnostics.py  pipeline.py
ugvu/benchmark/: __init__.py  runner.py
ugvu/calibration/: __init__.py  calibration_curve.py  correlation.py  ece.py  reliability.py
ugvu/configs/: config.py
ugvu/consensus/: __init__.py  consensus_fusion.py  cross_model_vote.py  majority_vote.py  weighted_vote.py
ugvu/datasets/: dataset.py
ugvu/decoders/: __init__.py  decoder.py
ugvu/generators/: __init__.py  base_generator.py  doubao.py  flux.py  google.py  qwen.py  rightcode.py  sampler.py
ugvu/metrics/: metrics.py
ugvu/prompts/: prompt_pool.py
ugvu/robustness/: __init__.py  generation_variance.py  model_variance.py  prompt_variance.py  robustness_score.py
ugvu/uncertainty/: __init__.py  entropy.py  uncertainty_map.py  (+1 more)
(+1 files in other folders)
